--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEconomics Recruitment</title>
+
+    <!-- Google Fonts for headings & body text -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <!-- Main stylesheet -->
     <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -110,18 +117,7 @@
         </div>
     </section>
 
-    <!-- SOCIAL PROOF -->
-    <section class="social-proof">
-        <blockquote>
-            “The curated shortlists saved us so much time and effort. We hired an excellent candidate who’s been a perfect fit.”
-        </blockquote>
-
-        <div class="stats">
-            <div><strong>90%</strong> retention after 6 months</div>
-            <div><strong>48-hour</strong> shortlist turnaround</div>
-            <div><strong>100+</strong> successful placements</div>
-        </div>
-    </section>
+    <!-- (SOCIAL PROOF SECTION REMOVED AS REQUESTED) -->
 
     <!-- SPLIT SECTION -->
     <section class="split-section">
@@ -227,17 +223,16 @@
         </div>
 
         <div class="social-icons">
-            <a href="#linkedin">LinkedIn</a> | 
-            <a href="#facebook">Facebook</a> | 
-            <a href="#instagram">Instagram</a>
+            <a href="https://www.linkedin.com/company/108644954" target="_blank" rel="noopener">LinkedIn</a> | 
+            <a href="https://www.facebook.com/profile.php?id=61579164382617" target="_blank" rel="noopener">Facebook</a> | 
+            <a href="https://www.instagram.com/weconomicsrecruitment/" target="_blank" rel="noopener">Instagram</a>
         </div>
 
         <p>© 2025 WEconomics Recruitment | 
-            <a href="#privacy">Privacy Policy</a> | 
-            <a href="#terms">Terms</a>
+            <a href="privacy.html">Privacy Policy</a> | 
+            <a href="terms.html">Terms</a>
         </p>
     </footer>
 
 </body>
 </html>
-
