--- a/index.html
+++ b/index.html
@@ -233,6 +233,7 @@
             <a href="terms.html">Terms</a>
         </p>
     </footer>
-
+<a href="privacy.html">Privacy Policy</a>
 </body>
 </html>
+
